css/style.css
/* ... */
* {
  font-family: "Geometria", sans-serif;
  margin: 0;
  padding: 0;
  text-decoration: none; }

input, textarea {
  padding: 0;
  border: 0;
  white-space: normal;
  background: none;
  line-height: 1;
  box-sizing: border-box;
  outline: none; }
  input:focus, textarea:focus {
    outline: none; }

body {
  min-width: 1170px;
  overflow-x: hidden; }

.container {
  margin: 0 auto;
  width: 1170px;
  box-sizing: border-box; }

header {
  position: relative;
  z-index: -2; }
  header .extra-element {
    position: absolute;
    display: block;
    bottom: 0px;
    transform-origin: bottom left; }
    header .extra-element#extra1 {
      transform: scale(1, 0.15); }
    header .extra-element#extra2 {
      transform: scale(0.3, 0.3); }
  header.services-header {
    min-height: 600px;
    background-image: url(../assets/servicesheader_bg-min.png);
    background-size: cover;
    background-position: center center; }
    header.services-header nav {
      display: flex;
      justify-content: space-around;
      align-items: center;
      padding: 10px; }
      header.services-header nav .logo-wrap {
        max-width: 502px; }
        header.services-header nav .logo-wrap .logo {
          width: 100%; }
      header.services-header nav a.main-link {
        display: block;
        width: 20%;
        text-align: center;
        color: #fdfdfd;
        font-size: 16px;
        font-weight: bolder;
        font-variant: small-caps; }
    header.services-header .slogan {
      padding-top: 10%;
      max-width: 50%;
      height: 100%;
      margin-left: 10%;
      display: flex;
      flex-direction: column;
      justify-content: space-around; }
      header.services-header .slogan h1 {
        text-transform: uppercase;
        color: #fdfdfd;
        align-self: flex-end;
        font-size: 64px; }
      header.services-header .slogan span {
        color: #fdfdfd;
        align-self: flex-end;
        font-size: 26px;
        font-variant: small-caps; }
  header.about-header {
    min-height: 650px;
    background-image: url(../assets/aboutheader_bg-min.png);
    background-size: cover;
    background-position: center top; }
    header.about-header nav {
      display: flex;
      justify-content: space-around;
      align-items: center;
      padding: 15px; }
      header.about-header nav a.main-link {
        display: block;
        width: 20%;
        text-align: center;
        flex: 1;
        color: #fdfdfd;
        font-size: 16px;
        font-weight: bolder;
        font-variant: small-caps; }
      header.about-header nav a.logo-wrap {
        max-width: 500px;
        flex: 2; }
        header.about-header nav a.logo-wrap .logo {
          width: 80%;
          display: block;
          margin: 0 auto; }
    header.about-header .slogan {
      padding-top: 10%;
      max-width: 50%;
      height: 100%;
      margin-left: 30%;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      text-shadow: 1px 1px 2px #4f4f4f; }
      header.about-header .slogan h1 {
        text-transform: uppercase;
        color: #fdfdfd;
        align-self: flex-end;
        font-size: 64px;
        font-weight: 100; }
      header.about-header .slogan span {
        color: #fdfdfd;
        align-self: flex-end;
        text-align: right;
        font-size: 18px;
        font-variant: small-caps; }
  header.main-header {
    height: 100vh;
    min-height: 940px;
    background-image: url(../assets/mainheader_bg-min.png);
    background-size: cover;
    background-position: center top; }
    header.main-header nav {
      display: flex;
      justify-content: space-around;
      align-items: center;
      padding: 10px; }
      header.main-header nav .logo-wrap {
        max-width: 502px; }
        header.main-header nav .logo-wrap .logo {
          width: 100%; }
      header.main-header nav a.main-link {
        display: block;
        width: 20%;
        text-align: center;
        letter-spacing: .5px;
        color: #fdfdfd;
        font-size: 16px;
        font-weight: bolder;
        font-variant: small-caps; }
    header.main-header .slogan {
      padding-top: 10%;
      max-width: 50%;
      height: 100%;
      display: flex;
      flex-direction: column;
      justify-content: space-around; }
      header.main-header .slogan h1 {
        text-transform: uppercase;
        color: #fdfdfd;
        align-self: flex-end;
        font-size: 64px;
        font-weight: 100; }
      header.main-header .slogan span {
        color: #fdfdfd;
        align-self: flex-end;
        font-size: 26px;
        font-variant: small-caps; }

section h2 {
  text-align: center;
  color: #4f4f4f; }

section p.section-quote {
  text-align: center;
  color: #929292; }

section.services-section .container {
  padding-top: 5%;
  padding-bottom: 12%;
  overflow-x: hidden; }
  section.services-section .container .service-wrap {
    margin-top: 100px;
    display: flex;
    justify-content: space-between; }
    section.services-section .container .service-wrap .service {
      max-width: 30%;
      padding: 20px;
      box-sizing: border-box;
      border-top: solid 2px #9E9E9E;
      border-bottom: solid 2px #9E9E9E; }
      section.services-section .container .service-wrap .service .price {
        text-align: center;
        font-size: 1.8em;
        color: #ED4009; }
      section.services-section .container .service-wrap .service .service-list {
        list-style: none; }
        section.services-section .container .service-wrap .service .service-list li {
          margin: 10px auto;
          text-align: center;
          color: #929292;
          width: 90%;
          font-size: .9em; }
          section.services-section .container .service-wrap .service .service-list li:first-child {
            font-size: 1.2em;
            color: #4f4f4f;
            width: 100%; }
/* ... */

